# lethe

./: .dockerignore  .gitignore  CMakeLists.txt  README.md
benchmarks/: crossover_sweep.py  plot_crossover.py  recovery_curve.py  trace_replay.py
benchmarks/workloads/: README.md
cache_server/: CMakeLists.txt
cache_server/include/lethe/: block_store.hpp  cache.hpp  eviction.hpp  kv_transport.hpp  membership.hpp  metrics.hpp  replication.hpp  routing.hpp  ssd_block_store.hpp  tiered_store.hpp  types.hpp
cache_server/src/: blake3_helper.hpp  block_store.cpp  cache.cpp  eviction.cpp  grpc_stream_transport.cpp  ibverbs_transport.cpp  main.cpp  membership.cpp  metrics.cpp  rdma_transport.cpp  replication.cpp  routing.cpp  ssd_block_store.cpp  tiered_store.cpp
chaos/: invariants.py  kill_node.py  packet_loss.py  partition.py  run_suite.sh
client/: pyproject.toml
client/lethe_client/: __init__.py  client.py  epoch_watcher.py  routing.py  vllm_hook.py
client/tests/: test_client_roundtrip.py  test_three_node_python.py
deploy/: Dockerfile  docker-compose.yml  prometheus.yml
deploy/grafana/: dashboard.json
deploy/grafana/dashboards/: dashboard.json
deploy/grafana/provisioning/dashboards/: provider.yml
deploy/grafana/provisioning/datasources/: prometheus.yml
disagg/: decode_worker.py  orchestrator.py  prefill_worker.py
docs/: ARCHITECTURE.md  BENCHMARKS.md  DECISIONS.md  DESIGN.md
docs/decisions/: W1_3_cpu_vllm.md  W1_4_model_choice.md  W1_vllm_pin.md  W3_checkpoint.md  W4_perf_regression.md  W4_readiness.md  W5_rdma_fallback.md  W7_checkpoint.md
docs/weekly/: W0.md  W10.md  W11.md  W11_1.md  W12.md  W12_2.md  W3_W4.md  W5_W6.md  W7_W8.md  W9.md
proto/: lethe.proto
scripts/: build.sh  failover_demo.sh  run_3node.sh  run_cluster.sh  setup_softroce.sh
tests/: CMakeLists.txt
tests/correctness/: _run_disagg.py  _run_disagg_for_w9.py  _run_vllm_for_w14.py  _run_vllm_native.py  test_connector_scheduler.py  test_disagg_token_identical.py  test_hash_compat.py  test_save_load_byte_identical.py  test_token_identical.py
tests/integration/: test_connector_loadability.py  test_failover.py  test_failover_recovery.py
tests/unit/: test_block_store.cpp  test_cache.cpp  test_eviction.cpp  test_membership.cpp  test_metrics.cpp  test_routing.cpp  test_routing.py  test_tiered_store.cpp
tools/: hash_compat_driver.cpp
