[build-system]
# setuptools >= 64 is the first version that ships the PEP 660
# build_editable() hook; older versions can build wheels but not
# editable installs through pyproject.toml-only projects (no setup.py).
# Pip's PEP 517 build-isolation env reads this list, so the local
# user-installed setuptools doesn't help - the min has to live here.
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "lethe-client"
version = "0.1.0"
description = "Python client and vLLM integration for the Lethe distributed KV cache."
requires-python = ">=3.10"
dependencies = [
  "grpcio>=1.60",
  "grpcio-tools>=1.60",
  "protobuf>=4.25",
  "blake3>=0.4",
  "numpy>=1.26",
]

[project.optional-dependencies]
# Pinned exactly. See docs/decisions/W1_vllm_pin.md for the analysis;
# the V1 KV connector API is the integration surface, base.py is
# byte-identical to 0.19.0, and we accept the experimental-API-churn
# risk explicitly because Lethe is a 12-week project.
vllm = ["vllm==0.19.1"]
bench = ["pandas", "matplotlib", "tqdm", "datasets"]
dev = ["pytest>=8", "pytest-asyncio", "mypy", "ruff"]

[tool.setuptools.packages.find]
where = ["."]
include = ["lethe_client*"]
